# compile

./: .gitignore  BUGS  CMakeLists.txt  Makefile  README.md  TODO  lex.h  token.cpp  token.h
last/: CMakeLists.txt  langconf.h.in
last/src/: CMakeLists.txt  astbuilder.cpp  astbuilder.h  lex.cpp  main.cpp  token.cpp  types.h
last/src/ast/: binaryexpression.h  callexpression.h  expression.h  functionexpression.h  intexpression.h  prototypeexpression.h  varexpression.h
last/test/: test.l  test2.l
src/: CMakeLists.txt  Makefile  ast.cpp  ast.h  astbuilder.cpp  astbuilder.h  builtins.cpp  builtins.h  jit.cpp  jit.h  lex.cpp  main.cpp  symbol.h  symboltable.cpp  symboltable.h  token.cpp  token.h
src/ast/: binaryexpession.h  binaryexpression.h  binaryoperation.h  call.h  callexpression.h  expression.h  floatliteral.h  functionbody.h  functiondef.h  functionexpression.h  ifstatement.h  intexpression.h  intliteral.h  prototypeexpression.h  symbolref.h  unaryoperation.h  varexpression.h  variabledec.h  variableinit.h  whilestatement.h
src/codegen/: Makefile  binaryoperation.cpp  call.cpp  codegen.cpp  codegen.h  floatliteral.cpp  functionbody.cpp  functiondef.cpp  ifstatement.cpp  intliteral.cpp  symbolref.cpp  unaryoperation.cpp  variableinit.cpp  whilestatement.cpp
src/parser/: .gitignore  Makefile  lex.l  parse.cpp  parse.h  parse.ypp  pathman.cpp  pathman.h
src/types/: Makefile  bool.cpp  bool.h  double.cpp  double.h  float.cpp  float.h  languagetype.cpp  sint.h  (+10 more)
test/: expression.f  function.f  if.f  ifloop.f  test.l  test2.l  trialdivision.f  unary.f  while.f
(+26 files in other folders)
